--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
     <link href="fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet">    
     <link href="css/product.css" rel="stylesheet">
     <link href="css/kitkat.css" rel="stylesheet">
+    <link href="css/modal.css" rel="stylesheet">
   </head>
   <body>
     <nav class="site-header sticky-top py-1">
   <div class="container d-flex flex-column flex-md-row justify-content-between">
     <a class="py-2" href="#" aria-label="Product">      
       SPONTEA COFFEE
-    </a>    
-    <a class="py-2 d-none d-md-inline-block" href="#"><i class="fas fa-cog"></i> Settings</a>    
+    </a>
+    <button type="button" class="py-2 d-none d-md-inline-block btn site-header" data-toggle="modal" data-target="#exampleModal">
+    </i> Settings
+    </button>   
   </div>
 </nav>
 
@@ -194,6 +197,65 @@
     </div>
   </div>
 </footer>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-body pt-4">
+        <div class="row">
+          <div class="col-md-4 element text-center border-right">
+            <h2>Profile</h2>
+            <img alt="profile" class="rounded-circle mt-1" src="https://picsum.photos/150" />
+            <ul class="mt-4 mx-2">
+              <li class="d-flex justify-content-between"><label>Location</label><span>Hamburg, Germany</span></li>
+              <li class="d-flex justify-content-between"><label>Position</label><span>Junior Developer</span></li>
+              <li class="d-flex justify-content-between"><label>Department</label><span>Hackathons</span></li>
+            </ul>
+          </div>
+          <div class="col-md-4 element text-center border-right">
+            <h2>Interests</h2>
+            <ul class="mx-4">
+              <li>I want to be matched:</li>
+              <li class="d-flex align-items-center my-1"><input checked class="mr-2" type="checkbox" id="option1"/><label class="m-0" htmlFor="option1">by interests</label></li>
+              <li class="d-flex align-items-center my-1"><input class="mr-2" type="checkbox" id="option2"/><label class="m-0" htmlFor="option2">when in office</label></li>
+              <li class="d-flex align-items-center my-1"><input checked class="mr-2" type="checkbox" id="option3"/><label class="m-0" htmlFor="option3">with my team</label></li>
+              <li class="d-flex align-items-center my-1"><input checked class="mr-2" type="checkbox" id="option4"/><label class="m-0" htmlFor="option4">company wide</label></li>
+            </ul>
+          </div>
+          <div class="col-md-4 element text-center">
+            <h2>Settings</h2>
+            <div>Reminders</div>
+            <div class="d-flex justify-content-around">
+              <div class="d-flex flex-column align-items-center">
+                <label htmlFor="reminders1">Daily</label>
+                <input checked type="checkbox" id="reminders1"/>
+              </div>
+              <div class="d-flex flex-column align-items-center">
+                <label htmlFor="reminders2">Weekly</label>
+                <input type="checkbox" id="reminders2"/>
+              </div>
+            </div>
+            <div class="mt-4">Preferred times</div>
+            <div class="d-flex justify-content-around">
+              <div class="d-flex flex-column align-items-center">
+                <label htmlFor="times1">8 - 12</label>
+                <input checked type="checkbox" id="times1"/>
+              </div>
+              <div class="d-flex flex-column align-items-center">
+                <label htmlFor="times2">14 - 18</label>
+                <input checked type="checkbox" id="times2"/>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="js/jquery-3.5.1.slim.min.js"></script>
