--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       SPONTEA COFFEE
     </a>
     <button type="button" class="py-2 d-none d-md-inline-block btn site-header" data-toggle="modal" data-target="#exampleModal">
-    </i> Settings
+      <i class="fas fa-cog"></i> Settings
     </button>   
   </div>
 </nav>
