--- a/index.html
+++ b/index.html
@@ -221,6 +221,14 @@
               <li class="d-flex align-items-center my-1"><input checked class="mr-2" type="checkbox" id="option3"/><label class="m-0" htmlFor="option3">with my team</label></li>
               <li class="d-flex align-items-center my-1"><input checked class="mr-2" type="checkbox" id="option4"/><label class="m-0" htmlFor="option4">company wide</label></li>
             </ul>
+            <div class="text-left mt-3">
+              <div class="font-weight-bold text-right text-secondary">+</div>
+              <span class="badge badge-pill badge-info">Swimming<span class="border-left pl-1 ml-1">X</span></i></span>
+              <span class="badge badge-pill badge-info">Crafting<span class="border-left pl-1 ml-1">X</span></i></span>
+              <span class="badge badge-pill badge-info">Coffee<span class="border-left pl-1 ml-1">X</span></i></span>
+              <span class="badge badge-pill badge-info">Hiking<span class="border-left pl-1 ml-1">X</span></i></span>
+              <span class="badge badge-pill badge-info">Bootstrap<span class="border-left pl-1 ml-1">X</span></i></span>
+            </div>
           </div>
           <div class="col-md-4 element text-center">
             <h2>Settings</h2>
