--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         It's great timing for Annie too.
         <br />
         Networking means inspiring each other and learning from new perspectives. Enjoy your break!
-        <br />Jump into this <button type="button" class="btn btn-outline-info my-2">video link</button>
+        <br />Jump into this 
+        <button type="button" class="btn btn-outline-info my-2" data-toggle="modal" data-target="#videoModal">video link</button>
       </div>
 
     </div>    
@@ -94,36 +95,36 @@
     <hr />
     <div class="mx-auto p-3" style="width: 80%; border-radius: 21px 21px 0 0;">
       <div class="people">
-        <img src="img/avatar2.png" alt="Avatar" class="avatar">
+        <img src="img/avatar6.png" alt="Avatar" class="avatar">
         <span class="name">Annabel Apsion</span> 
-        <span class="status">is currently talking to Dave Ramsey. Join in?</span>
+        <span class="status">is currently talking to Peter Parker. Join in?</span>
       </div>
       <div class="people">
-        <img src="img/avatar1.png" alt="Avatar" class="avatar">
-        <span class="name">Jackson Pollock</span> 
+        <img src="img/avatar8.png" alt="Avatar" class="avatar">
+        <span class="name">Viktoria Sheyko</span> 
         <span class="status">last conversation was 3 hours ago</span>
       </div>
       <div class="people">
-        <img src="img/avatar3.png" alt="Avatar" class="avatar">
-        <span class="name">Hans Holbein</span> 
+        <img src="img/avatar11.png" alt="Avatar" class="avatar">
+        <span class="name">Dioni Zhong</span> 
         <span class="status">has not had a 5 today</span>
       </div>
       <div class="people">
-        <img src="img/avatar4.png" alt="Avatar" class="avatar">
-        <span class="name">Salvador Dali</span> 
+        <img src="img/avatar9.png" alt="Avatar" class="avatar">
+        <span class="name">Frida Kahlo</span> 
         <span class="status">put a no disturb sign</span>
+      </div>      
+      <div class="people">
+        <img src="img/avatar10.png" alt="Avatar" class="avatar">
+        <span class="name">Tom Quast</span>
+      </div>
+      <div class="people">
+        <img src="img/avatar7.png" alt="Avatar" class="avatar">
+        <span class="name">Jean Milo</span>
       </div>
       <div class="people">
         <img src="img/avatar1.png" alt="Avatar" class="avatar">
         <span class="name">Pablo Picasso</span>
-      </div>
-      <div class="people">
-        <img src="img/avatar5.png" alt="Avatar" class="avatar">
-        <span class="name">El Greco</span>
-      </div>
-      <div class="people">
-        <img src="img/avatar4.png" alt="Avatar" class="avatar">
-        <span class="name">Jean Milo</span>
       </div>
       <div class="people badge badge-pill badge-light">
         <h2><i class="fas fa-ellipsis-h"></i></h2>
@@ -135,7 +136,7 @@
     <hr />
     <div class="mx-auto p-3" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
       <div class="people">
-        <span class="name">Frida Kahlo</span>
+        <span class="name">Salvador Dali</span>
       </div>
       <div class="people">
         <span class="name">Bruce Wayne</span>
@@ -167,25 +168,7 @@
         <li><a class="text-muted" href="#">Another one</a></li>
         <li><a class="text-muted" href="#">Last time</a></li>
       </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="text-muted" href="#">Resource</a></li>
-        <li><a class="text-muted" href="#">Resource name</a></li>
-        <li><a class="text-muted" href="#">Another resource</a></li>
-        <li><a class="text-muted" href="#">Final resource</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="text-muted" href="#">Business</a></li>
-        <li><a class="text-muted" href="#">Education</a></li>
-        <li><a class="text-muted" href="#">Government</a></li>
-        <li><a class="text-muted" href="#">Gaming</a></li>
-      </ul>
-    </div>
+    </div>    
     <div class="col-6 col-md">
       <h5>About</h5>
       <ul class="list-unstyled text-small">
@@ -260,6 +243,22 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" style="height: 700px;" role="document">
+    <div class="modal-content">
+      <div class="modal-body" style="margin-top: -70px;">
+        <video width="750" height="600" controls>
+          <source src="img/chat.mp4" type="video/mp4">          
+          Your browser does not support the video tag.
+        </video>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>        
       </div>
     </div>
   </div>
