add video links and rearrange bubbles

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       Have you reached the midday low? Boost your energy level with a quick break!
       <br />You spot Annie in the kitchen. Say hi?
 
-      <br /><button type="button" class="btn btn-outline-info my-2">Yes</button> 
+      <br /><button type="button" class="btn btn-outline-info my-2" onclick="showBubble2()">Yes</button> 
       <button type="button" class="btn btn-outline-secondary my-2">I'll pass</button>
       </div>
 
@@ -97,7 +97,8 @@
       <div class="people">
         <img src="img/avatar6.png" alt="Avatar" class="avatar">
         <span class="name">Annabel Apsion</span> 
-        <span class="status">is currently talking to Peter Parker. Join in?</span>
+        <span class="status">is currently talking to Peter Parker.</span>
+        <button type="button" class="btn btn-outline-info btn-sm my-1 ml-5" data-toggle="modal" data-target="#videoModal">Join in?</button>
       </div>
       <div class="people">
         <img src="img/avatar8.png" alt="Avatar" class="avatar">
